# rm-bias

./: .gitignore  CLAUDE.md  README.md  alt_pipeline.py  analysis.py  api_models.py  api_prompts.py  baselines.py  bias.py  bias_baseline.py  bias_conditional.py  bias_evaluator.py  bias_plot.py  bias_rewrite.py  bias_workers.py  bias_workers_baseline.py  bias_workers_rewrite.py  bon_iter.py  cfg.py  client.py  cluster.py  cluster_bertopic.py  cluster_models.py  cluster_wc.py  compare_bonferroni.py  data_cleaning.py  default_prompts.py  defaults.py  evo.py  evo_new_prompts.py  evo_prompts.py  exp1_fictitious_event.py  exp_attribute_validation.py  exp_attribute_validation_local.py  exp_fictitious_event.py  exp_known_bias.py  exp_test_clusters.py  exp_triple_space_bias.py  exp_triple_space_bias_sae.py  expected_json_structure.md  (+64 more)
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.claude/commands/: mistake.md
.claude/hooks/: bell.sh
data/evo/20251218-155435-list_reverse-handpick-plus/: config.json
data/evo/20251226-133700-list_reverse-chatgpt-plus/: config.json
data/evo/20260103-171901-list_reverse-handpick-plus/: config.json
data/synthetic/: all_specs.txt  sub_topics.json
data/synthetic_2/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
evaluation/: evaluation.py  llm.py
old_code/: alt_pipeline.py  cluster.py  levels.py  load_cluster.py  logprobs.py  pair.py  schema.md  validate_scrap.py  viz_utils.py
outdated/: prompt_stats.py
scrap/20250930-225258/: rewrite_results_mean.json
scrap/20250930-230158/: rewrite_results_mean.json
scrap/20250930-231718/: rewrite_results_mean.json
scrap/20251001-000007/: rewrite_results_mean.json
scripts/: analyze_baselines.py  analyze_length_confounding.py  check_outliers.py  check_train_test_overlap.py  extract_validation_stats.py  print_latex_examples.py
user_prompts/chatgpt/n_sub_2/: specs.json
user_prompts/clio/n_sub_0/: cluster_0.json  cluster_1.json  cluster_10.json  cluster_11.json  cluster_12.json  cluster_13.json  cluster_14.json  cluster_15.json  cluster_16.json  cluster_17.json  cluster_18.json  cluster_19.json  cluster_2.json  cluster_3.json  cluster_4.json  cluster_5.json  cluster_6.json  cluster_7.json  cluster_8.json  cluster_9.json  specs.json  sub_topics.json
user_prompts/handpick/n_sub_0/: cluster_0.json  cluster_1.json  cluster_10.json  cluster_11.json  cluster_12.json  cluster_13.json  cluster_14.json  cluster_15.json  cluster_16.json  cluster_17.json  cluster_18.json  cluster_19.json  cluster_2.json  cluster_20.json  cluster_21.json  cluster_3.json  cluster_4.json  cluster_5.json  cluster_6.json  cluster_7.json  cluster_8.json  specs.json  (+2 more)
(+153 files in other folders)
