[project]
name = "rm-bias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "datasets>=4.0.0",
    "dictionary-learning",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "openai>=1.102.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "slist>=0.3.15",
    "tenacity>=9.1.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
    "wandb>=0.21.2",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
dictionary-learning = { workspace = true }

[tool.uv.workspace]
members = [
    "dictionary_learning",
]

[tool.ruff.lint]
ignore = ["E402", "F403", "F405", "F722", "F821"]
