[project]
name = "rm-bias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "bertopic>=0.17.3",
    "black>=25.9.0",
    "chat-limiter>=0.14.0",
    "datasets>=4.0.0",
    "dictionary-learning",
    "hf-transfer>=0.1.9",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "openai>=1.102.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "slist>=0.3.15",
    "streamlit>=1.49.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
    "wandb>=0.21.2",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.ruff.lint]
ignore = ["E402", "F401", "F403", "F405", "F541", "F722", "F821"]
